# confinia-core

./: .gitignore  DEV.md  MONITORING.md  Makefile  README.md  RULES.md  SPECIFICATIONS.md  TEST_POLAR.md  TEST_SUBSCRIPTION.md  TODO.md  docker-compose.yml
.github/workflows/: subscription-tests.yml
api/: Dockerfile  main.py  requirements.txt
clients/python/: README.md  pyproject.toml
clients/python/confinia/: __init__.py
clients/r/confinia/: DESCRIPTION  NAMESPACE  README.md
clients/r/tests/: smoke.R
demo/: index.html
deploy/: Caddyfile  backup-ops.sh  build-geo.sh  deploy-api.sh  deploy-data.sh  deploy-edge.sh  otel-collector.yaml  prometheus.yml  refresh-geoip.sh  stacks.sh
deploy/caddy/: Caddyfile
deploy/caddy/sites/: ecobuilding.caddy
deploy/keycloak/: setup-realm.sh
deploy/site/: account.html  commune.html  index.html  pricing.html
deploy/sites/: ecobuilding.caddy
deploy/stack/: blue.env  docker-compose-blue.yml  docker-compose-green.yml  docker-compose.yml  green.env
deploy/systemd/: confinia-ops-backup.service  confinia-ops-backup.timer
ingestion/: Dockerfile  README.md  ingest_cog.py  ingest_de.py  ingest_epci.py  ingest_lau.py  ingest_nl.py  ingest_nuts.py  ingest_nz.py  ingest_ons.py  ingest_snapshots.py  ingest_trf.py  ingest_trf_dept.py  ingest_trf_supra.py  join_geometry.py  reconcile_uk.sql  requirements.txt  sources.sql  verify_ain.py
tests/: conftest.py  fixture.sql  smoke_prod.py  test_bearer.py  test_epci.py  test_keycloak.py  test_passage.py  test_polar.py  test_python_client.py  test_subscription.py
(+10 files in other folders)
